Mon Oct  8 02:15:47 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING: Minor release process adjustment now that we're no
	  longer using CVS.

Mon Oct  8 02:13:15 BST 2007  Colin Watson  <cjwatson@debian.org>

	* README: Building the manual requires running ./configure now.

Mon Oct  8 02:09:55 BST 2007  Colin Watson  <cjwatson@debian.org>

	The strappend function is in the namespace reserved by C99
	7.26.10/7.26.11; rename it to appendstr.

	* lib/strappend.c: Rename to ...
	* lib/appendstr.c: ... this. Rename function.
	* lib/Makefile.in (ALLSRCS, ALL): Build appendstr instead of
	  strappend.
	* lib/README: Update credit.
	* include/manconfig.h.in: Update prototype.
	* lib/decompress.c, lib/pathsearch.c, lib/pipeline.c,
	  lib/tempfile.c, libdb/db_delete.c, src/accessdb.c, src/catman.c,
	  src/check_mandirs.c, src/compression.c, src/convert_name.c,
	  src/encodings.c, src/filenames.c, src/globbing.c,
	  src/lexgrog.l.new, src/man.c, src/manconv.c, src/mandb.c,
	  src/manp.c, src/straycats.c, src/ult_src.c, src/util.c,
	  src/whatis.c, src/zsoelim.l: Update all callers.
	* docs/HACKING: Update reference.
	* docs/TODO: Remove item for this.

Mon Oct  8 01:21:10 BST 2007  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (_man): Ship po4a files.
	  (dist): Create the necessary directories.

Mon Oct  8 01:16:07 BST 2007  Colin Watson  <cjwatson@debian.org>

	Build the manual automatically. This avoids problems trying to do a
	distclean (distclean at the top level runs ./config.status --recheck
	and regenerates manual/Makefile, but manual/Makefile requires
	include/Defines to exist, so there is no way to distclean both the
	top level and manual/).

	* GNUmakefile.in (EVERYTHING, ALL): Add manual.
	  (_subdirs): Remove manual, now included in $(EVERYTHING).

Sun Oct  7 17:05:54 BST 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.0.
	* configure.ac, docs/NEWS, man-db.lsm: Update.
