@@ -97,10 +97,10 @@ struct page_description *parse_descriptions (const char *base_name,
 
 			/* Allocate new description node. */
 			if (head) {
-				desc->next = malloc (sizeof *desc);
+				desc->next = xmalloc (sizeof *desc);
 				desc = desc->next;
 			} else {
-				desc = malloc (sizeof *desc);
+				desc = xmalloc (sizeof *desc);
 				head = desc;
 			}
 			desc->name   = trim_spaces (token);
@@ -121,11 +121,11 @@ struct page_description *parse_descriptions (const char *base_name,
 	 */
 	if (base_name && !seen_base_name) {
 		if (head) {
-			desc->next = malloc (sizeof *desc);
+			desc->next = xmalloc (sizeof *desc);
 			desc = desc->next;
 			desc->whatis = xstrdup (head->whatis);
 		} else {
-			desc = malloc (sizeof *desc);
+			desc = xmalloc (sizeof *desc);
 			head = desc;
 			desc->whatis = NULL;
 		}
