@@ -1,3 +1,10 @@
+Mon Oct  8 02:24:19 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/popen.c (popen), src/descriptions.c (parse_descriptions),
+	  src/man.c (add_candidate), src/manp.c (add_dir_to_path_list): Use
+	  xmalloc instead of malloc.
+	* lib/pipeline.c (get_block): Use xrealloc instead of realloc.
+
 Mon Oct  8 02:15:47 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* docs/HACKING: Minor release process adjustment now that we're no
